mediafusion/08-dramatiq-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dramatiq-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dramatiq-worker
  template:
    metadata:
      labels:
        app: dramatiq-worker
    spec:
      containers:
      - name: dramatiq-worker
        image: mhdzumair/mediafusion:4.3.34
        command: ["dramatiq", "api.task", "-p", "1", "-t", "1"]
        #command: ["env"]
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "1Gi"
            cpu: "200m"
