mediafusion/09-mediafusion-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediafusion-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediafusion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: mediafusion
    spec:
      containers:
      - name: mediafusion
        image: mhdzumair/mediafusion:4.3.34
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "800Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 5
          timeoutSeconds: 10

---
 
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mediafusion
  name: mediafusion
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.14.23
  ports:
  - name: "mediafusion-http"
    port: 8000
    targetPort: 8000
  selector:
    app: mediafusion
status:
  loadBalancer: {}
